Add starting interview process (manually)